<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cr30b100425"
    tools:context=".forgot">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/ryedicay7nyj"
                android:layout_width="273dp"
                android:layout_height="241dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="19dp"
                android:layout_marginTop="15dp"
                android:scaleType="fitXY"
                android:src="@drawable/forgot1p"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/rsqe0cinnyvq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/kavoon"
                android:text="@string/forgot_password"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/r0m46kpfhcgf8"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:fontFamily="@font/kavoon"
                android:layout_marginBottom="39dp"
                android:layout_marginStart="11dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/please_enter_email_which_is_linked_from_account"
                />

            <LinearLayout
                android:id="@+id/r3rykhdgryfd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/cr30bffffff"
                android:paddingVertical="22dp"
                android:paddingHorizontal="21dp"
                android:layout_marginBottom="100dp"
                android:layout_marginHorizontal="4dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/rcoekxgow2wq"
                    android:textColor="#4F555A"
                    android:textSize="18sp"
                    android:layout_marginEnd="4dp"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/enter_email"
                    />
                <LinearLayout
                    android:id="@+id/rnksoovqnosn"
                    android:layout_width="18dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cross"
                    android:paddingHorizontal="7dp"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/r8ir261hqh55"
                android:layout_width="259dp"
                android:layout_height="221dp"
                android:layout_marginHorizontal="12dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/rgtia8hb58gk"
                        android:layout_width="398dp"
                        android:layout_height="221dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ellipse"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/r2jd9tbkdkxx"
                    android:layout_marginTop="-58dp"
                    android:layout_marginStart="2dp"
                    android:layout_width="900dp"
                    android:layout_height="63dp"
                    android:background="@drawable/cr30b4461f2"
                    android:paddingHorizontal="9dp"
                    android:elevation="30dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/rp4ftm2hzob"
                        android:textColor="#FFFFFF"
                        android:textSize="19sp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="21dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/reset_my_password"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
</LinearLayout>